crates/sheltie-core/src/work/snapshots/sheltie_core__work__render__tests__brief_for_node_with_requires.snap
---
source: crates/sheltie-core/src/work/render.rs
expression: "render_brief(fx.state(), &fx.graph, a, \"Use the company API.\")"
---
# Brief: Only node

Work: 2026-09-24-001-t (t)
Node: only#1, Attempt 0
From: entry
Executor: agent (standard)

## Inputs

| Name | Path | sha256 |
| --- | --- | --- |

## Required host resources

| Kind | Name | Version | Instructions |
| --- | --- | --- | --- |
| skill | company-api | - | Confirm your host has this skill installed; otherwise stop and inform the user |

## Instructions

Use the company API.

## Output requirements

| Name | Write to | Required | Limit |
| --- | --- | --- | --- |
| out | /tmp/sheltie-test/works/2026-09-24-001-t/attempts/only/occurrence-001/attempt-000/outputs/out.md | yes | 1 MiB |

Do not modify input files after finishing. Summarize your conclusion for the coordinator and list the output files you wrote.
