crates/sheltie-core/src/work/snapshots/sheltie_core__work__render__tests__stats_table_mid_flow.snap
---
source: crates/sheltie-core/src/work/render.rs
expression: "render_stats(fx.state(), &fx.graph)"
---
# Stats 2026-09-24-001-t

status: active   total: 0s   blocked: 0   approvals: 0

| node | visits | attempts | failed | avg | entered_via |
| --- | --- | --- | --- | --- | --- |
| draft | 2/3 | 2 | 0 | 0s | entry×1, review×1 |
| review | 1/3 | 1 | 0 | 0s | draft×1 |
| publish | 0/1 | 0 | 0 | 0s |  |
