crates/sheltie-core/src/work/snapshots/sheltie_core__work__render__tests__t10_status_card_blocked_on_gate.snap
---
source: crates/sheltie-core/src/work/render.rs
expression: "render_status_card(fx.state(), &fx.graph)"
---
# Work 2026-09-24-001-t（t）

workbook: gated-release@1.0.0   flow: default   status: blocked(gate)
current: notes#1
done: notes#1
pending: archive
visits: notes 1/1, archive 0/1
blocked: gate: notes#1 需要 gate approve

## 最近一次尝试

notes#1.0 succeeded
summary: 写好了
outputs:
  notes → /tmp/sheltie-test/works/2026-09-24-001-t/attempts/notes/1/0/notes.md (sha256 fc11d6f28e59d3cc33c0b14ceb644bf0902ebd63d61218dffe9e7dac7c254542, 10 B)

## 合法下一步

- sheltie gate approve 2026-09-24-001-t --node notes
- sheltie work cancel 2026-09-24-001-t
